Fixed symbols on safari, gave up on fixing hover line glitch

--- a/styles/index.css
+++ b/styles/index.css
@@ -72,7 +72,7 @@ body {
 }
 
 .selected-hover:hover::before {
-  content: "»";
+  content: "\00BB";
   margin-right: 0.5rem;
   width: auto;
 }
