--- a/styles/projects.css
+++ b/styles/projects.css
@@ -55,7 +55,7 @@ body {
 }
 
 .selected-hover:hover::before {
-  content: "»";
+  content: "\00BB";
   margin-right: 0.5rem;
   width: auto;
 }
